feat(swagger): Swagger 구성 개선 및 인증 설정 추가 JWT Bearer 토큰 인증 스키마 설정 추가 페이지네이션 글로벌 파라미터(page, size) 추가 서버 정보 및 API 메타데이터 설정 강화 라이센스 및 연락처 정보 구성